--- a/intex.html
+++ b/intex.html
@@ -13,8 +13,23 @@
         <div></div>
       </div>
       <div class="nav-title">
+        <div class="app-name"></div>
+        <div class="chief">
+          <div class="Name"></div>
+          <div class="photo"></div>
+        </div>
+      </div>
+    </div>
+    <div class="search">
+      <div class="search-bar"></div>
+      <div class="icon"></div>
+    </div>
+    <div class="location">
+      <div class="address">
+        <div></div>
         <div></div>
       </div>
+      <div class="map"></div>
     </div>
   
   </body>
