added recommend page to menu

--- a/intex.html
+++ b/intex.html
@@ -3,33 +3,47 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+  <link rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC" rel="stylesheet">
   </head>
   <body>
     <div class="nav">
       <div class="nav-button">
-        <div></div>
-        <div></div>
+        <a href="recommend.html">
+         <div class="menu-lines">
+           <div class="s-line"></div>
+           <div class="l-line"></div>
+           <div class="m-line"></div>
+         </div>
+        </a>
+        <div class="menu-dots">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="f-dot"></div>
+        </div> 
       </div>
       <div class="nav-title">
-        <div class="app-name"></div>
-        <div class="chief">
-          <div class="Name"></div>
+        <div class="app-name">Delicious</div>
+        <div class="chef">
+          <div class="Name">Dale Hines, Chef</div>
           <div class="photo"></div>
-        </div>
+        </div>       
       </div>
+      
     </div>
     <div class="search">
-      <div class="search-bar"></div>
+      <input type="text" name="fname" placeholder="Find your chef">
       <div class="icon"></div>
     </div>
-    <div class="location">
-      <div class="address">
-        <div></div>
-        <div></div>
-      </div>
-      <div class="map"></div>
+    <div class="chef-fav">
+     <div class="location">
+       <div class="address">
+         <div class="restaurant"></div>
+         <div class="restaurant-info"></div>
+       </div>
+       <div class="map"></div>
+     </div>
     </div>
   
   </body>
