mapping out recommend page

--- a/recommend.html
+++ b/recommend.html
@@ -6,10 +6,75 @@
   <link rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="recommend.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
 
-<div>hi</div>
+   <div class="mobile-back"><i class="material-icons" style="font-size:36px">arrow_back</i></div>
+   <div class="title-bar">
+     <div class="title">Recommend</div>
+     <div class="photo"></div>
+   </div>
+   <div class="nav-bar">
+     <div>Popular</div>
+     <div>Resent</div>
+     <div>Top Rate</div>
+     <div>Fresh</div>
+   </div>
+   <div class="slt-card">
+     <div>
+       <div class="id"></div>
+     </div>
+     <div class="card">
+       <div>
+         <div>Dinner Recipes</div>
+         <div>$15.50</div>
+       </div> 
+       <div class="heart"></div>
+     </div>
+   </div>
+   <div>
+    <div class="l-card">
+      <div>
+        <div></div>
+        <div></div>
+      </div>
+      <div>
+        <div>snack all</div>
+        <div>$6.50</div>
+      </div>   
+    </div>
+    <div class="main-card">
+      <div>
+         <div></div>
+         <div></div>
+       </div>
+      <div>
+        <div>Desserts</div>
+        <div>$9.50</div>
+      </div>     
+    </div>
+    <div class="r-card">
+      <div>
+         <div></div>
+         <div></div>
+      </div>
+      <div>
+        <div>fruity tootie</div>
+        <div>$12.50</div>
+      </div>     
+    </div>
+   </div>
+   <div class="mobile-menu">
+     <div><i class="material-icons" style="font-size:36px">home</i></div>
+     <div><i class="material-icons" style="font-size:36px">search</i></div>
+     <div><i class="fa fa-bell-o" style="font-size:36px"></i></div>
+     <div><i class="material-icons" style="font-size:36px">people_outline</i></div>
+   </div>
+
 
 
 
