finshing up the moblie for recommend page

--- a/recommend.html
+++ b/recommend.html
@@ -19,53 +19,59 @@
      <div class="photo"></div>
    </div>
    <div class="nav-bar">
-     <div>Popular</div>
+     <div class="highlighted">Popular</div>
      <div>Resent</div>
      <div>Top Rate</div>
      <div>Fresh</div>
    </div>
    <div class="slt-card">
-     <div>
+     <div class="slt-photo">
        <div class="id"></div>
      </div>
      <div class="card">
-       <div>
+      <div class="card-info">
          <div>Dinner Recipes</div>
          <div>$15.50</div>
        </div> 
-       <div class="heart"></div>
+       <div class="heart"><i class="fa fa-heart-o" style="font-size:24px"></i></div>
      </div>
    </div>
-   <div>
+   <div class="suggestions">
     <div class="l-card">
-      <div>
-        <div></div>
-        <div></div>
+      <div class="l-photo">
+        <div class="id"></div>
       </div>
-      <div>
+      <div class="cards">
+      <div class="card-info">
         <div>snack all</div>
         <div>$6.50</div>
-      </div>   
+      </div> 
+      <div class="heart"><i class="fa fa-heart-o" style="font-size:24px"></i></div>
     </div>
+  </div>
     <div class="main-card">
-      <div>
-         <div></div>
-         <div></div>
+      <div class="main-photo">
+         <div class="id"></div> 
        </div>
-      <div>
+       <div class="cards">
+      <div class="card-info">
         <div>Desserts</div>
         <div>$9.50</div>
-      </div>     
+      </div>  
+      <div class="heart"><i class="fa fa-heart-o" style="font-size:24px"></i></div>   
+     </div>
     </div>
     <div class="r-card">
-      <div>
-         <div></div>
-         <div></div>
+      <div class="r-photo">
+         <div class="id"></div>
       </div>
-      <div>
+      <div class="cards">
+      <div class="card-info">
         <div>fruity tootie</div>
         <div>$12.50</div>
-      </div>     
+      </div>  
+      <div class="heart"><i class="fa fa-heart-o" style="font-size:24px"></i></div>   
+     </div>
     </div>
    </div>
    <div class="mobile-menu">
