finished up ready to launch

--- a/recommend.html
+++ b/recommend.html
@@ -12,8 +12,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-
+   <a href="index.html">
    <div class="mobile-back"><i class="material-icons" style="font-size:36px">arrow_back</i></div>
+   </a>
    <div class="title-bar">
      <div class="title">Recommend</div>
      <div class="photo"></div>
