--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC" rel="stylesheet">
-  </head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ </head>
   <body>
     <div class="nav">
       <div class="nav-button">
@@ -40,7 +41,10 @@
      <div class="location">
        <div class="address">
          <div class="restaurant"></div>
-         <div class="restaurant-info"></div>
+         <div class="restaurant-info">
+           <div class="info"><div class="PC"><i class="material-icons" style="font-size:60px;color:purple">location_on</i></div><div class="moblie"><i class="material-icons" style=" font: size 12px;color:purple">location_on</i></div> Meyer Lemon </div>
+           <p>5683 Smitham Wells</p> 
+          </div>
        </div>
        <div class="map"></div>
      </div>
