--- a/recommend.html
+++ b/recommend.html
@@ -54,7 +54,7 @@
       <div class="main-photo">
          <div class="id"></div> 
        </div>
-       <div class="cards">
+       <div class="m-cards">
       <div class="card-info">
         <div>Desserts</div>
         <div>$9.50</div>
